[gd_scene load_steps=8 format=3 uid="uid://bb7il3v4p34c2"]

[ext_resource type="Script" path="res://scenes/objects/exit.gd" id="1_hjvcy"]
[ext_resource type="PackedScene" uid="uid://cpgq3jnpmad0h" path="res://models/objects/exit.blend" id="1_ruo4l"]
[ext_resource type="PackedScene" uid="uid://bqstwknk1ys52" path="res://models/objects/padlock.blend" id="3_cjlw6"]
[ext_resource type="AudioStream" uid="uid://c6627f5j6lnm3" path="res://audio/door_open.mp3" id="4_4xqrv"]
[ext_resource type="AudioStream" uid="uid://dhloong2c80jh" path="res://audio/door_unlock.mp3" id="5_wshkb"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3pdqh"]
size = Vector3(1.81723, 3.03465, 1.89527)

[sub_resource type="BoxShape3D" id="BoxShape3D_akg6b"]
size = Vector3(0.465663, 3.13814, 1.63538)

[node name="Exit" type="StaticBody3D" groups=["Exit"]]
collision_layer = 4
script = ExtResource("1_hjvcy")

[node name="ExitMesh" parent="." instance=ExtResource("1_ruo4l")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(0.0385622, 0, 0.999256, 0, 1, 0, -0.999256, 0, 0.0385622, 0, 0, 0)
collision_layer = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, -3.72529e-09, 0, 1, 0, 3.72529e-09, 0, 1, 0.0350354, 1.32523, 0.907868)
shape = SubResource("BoxShape3D_3pdqh")

[node name="Padlock" parent="." instance=ExtResource("3_cjlw6")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.249288, 1.32586, 0.0359361)

[node name="DoorOpenAudio" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_4xqrv")

[node name="DoorUnlockAudio" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_wshkb")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.67156, 0)
shape = SubResource("BoxShape3D_akg6b")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]

[editable path="ExitMesh"]
[editable path="Padlock"]
